feat: add scroll bar

--- a/src/features/todo/components/todo/Todo.module.css
+++ b/src/features/todo/components/todo/Todo.module.css
@@ -32,6 +32,8 @@
 }
 .todo-list {
   height: 100%;
+  padding-right: 1.6rem;
+  overflow-y: auto;
   .todo {
     font-size: 2rem;
     padding: 2rem;
