--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -2,7 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import "./typograph.css";
+@import "./typography.css";
 html,
 body,
 div,
