--- a/src/features/todo/components/todo/Todo.module.css
+++ b/src/features/todo/components/todo/Todo.module.css
@@ -1,51 +1,120 @@
-.wrapper {
-  width: 50vw;
-  padding: 2rem;
-  aspect-ratio: 1/1;
-  border-radius: 1.6rem;
-  background-color: #9894ed;
+.container {
+  position: absolute;
+  inset: 0;
+  display: grid;
+  place-items: center;
 }
-.todo-box {
-  display: flex;
-  flex-direction: column;
-  row-gap: 2rem;
-  height: 100%;
-  padding: 2rem;
-  border-radius: 1rem;
-  background-color: #4640b0;
-  .input {
-    width: 100%;
-    padding: 1rem;
-    font-size: 1.6rem;
-    color: #fff;
-    background-color: transparent;
-    border: 0;
-    border-bottom: 1px solid #fff;
-    &::placeholder {
-      color: #d8d8d8;
-    }
-    &:focus-visible {
-      outline: 0;
-      border-bottom: 2px solid #fff;
+.box {
+  --cursor-pointer: url("../../../../assets/icons/cursor-pointer.svg"), pointer;
+  min-width: 54rem;
+  .input-box {
+    margin-top: 4.8rem;
+    padding: 2rem 2.4rem;
+    border-radius: 5px;
+    background-color: #25273d;
+    .input-box__input {
+      width: 100%;
+      font-size: 2.4rem;
+      font-family: "Josefin Sans", sans-serif;
+      color: #fff;
+      background-color: transparent;
+      border: none;
+      outline: none;
+      caret-color: #3a7cfd;
+
+      &::placeholder {
+        color: #767992;
+        font-family: "Josefin Sans", sans-serif;
+      }
     }
   }
-}
-.todo-list {
-  height: 100%;
-  padding-right: 1.6rem;
-  overflow-y: auto;
-  .todo {
-    font-size: 2rem;
-    padding: 2rem;
-    background-color: rgba(250, 235, 215, 1);
-    border-radius: 0.8rem;
-    transition: background-color 300ms ease-in-out;
-    &:not(:first-child) {
-      margin-top: 2rem;
-    }
+  .list-box {
+    margin-top: 2.4rem;
+  }
+  .list-box__item {
+    position: relative;
+    padding: 2rem 2.4rem;
+    display: flex;
+    column-gap: 2.4rem;
+    align-items: center;
+    background-color: #25273d;
     &:hover {
-      background-color: rgba(250, 235, 215, 0.8);
-      cursor: pointer;
+      .list-item__checkmark {
+        border-color: transparent;
+        background-image: linear-gradient(#25273d, #25273d),
+          linear-gradient(to right, #55ddff, #c058f3);
+      }
+    }
+    &:not(:first-child) {
+      border-top: 1px solid #393a4c;
+    }
+    &:first-child {
+      border-radius: 5px 5px 0 0;
+    }
+    &:last-child {
+      border-radius: 0 0 5px 5px;
+    }
+    .list-item__text {
+      font-size: 1.8rem;
+      color: #c8cbe7;
+      transition: color 0.3s ease, text-decoration 0.3s ease;
+    }
+    .list-item__label {
+      position: absolute;
+      inset: 0;
+      cursor: var(--cursor-pointer);
+    }
+    .list-item__checkbox {
+      position: absolute;
+      opacity: 0;
+      height: 0;
+      width: 0;
+
+      &:checked ~ .list-item__text {
+        text-decoration: line-through;
+        color: #4d5067;
+      }
+      &:checked ~ .list-item__checkmark {
+        border-color: transparent;
+        background-image: linear-gradient(to right, #55ddff, #c058f3),
+          linear-gradient(to right, #55ddff, #c058f3);
+      }
+      &:checked ~ .list-item__checkmark > svg {
+        opacity: 1;
+      }
+    }
+    .list-item__checkmark {
+      --border-width: 1px;
+      display: grid;
+      place-items: center;
+      width: 2.4rem;
+      height: 2.4rem;
+      border: solid 1px #393a4b;
+      border-radius: 50%;
+      background-origin: border-box;
+      background-clip: padding-box, border-box;
+      transition: border 0.5s ease, background-image 0.5s ease;
+      pointer-events: none;
+      svg {
+        opacity: 0;
+        transition: opacity 0.3s ease;
+      }
     }
   }
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+.title {
+  font-size: 4rem;
+  font-weight: 700;
+  letter-spacing: 15px;
+  text-transform: uppercase;
+  color: #fff;
+}
+.button--toggle-theme {
+  background: none;
+  border: none;
+  cursor: pointer;
 }
