--- a/src/features/todo/components/todo/Todo.module.css
+++ b/src/features/todo/components/todo/Todo.module.css
@@ -5,7 +5,8 @@
   place-items: center;
 }
 .box {
-  min-width: 54rem;
+  width: 50vw;
+  max-width: 70rem;
   .input-box {
     margin-top: 4.8rem;
     padding: 2rem 2.4rem;
@@ -61,6 +62,11 @@
       font-size: 1.8rem;
       color: #c8cbe7;
       transition: color 0.3s ease, text-decoration 0.3s ease;
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 1; /* 3 行後會被省略 */
+      white-space: pre-wrap; /* 文字要換行 */
     }
     .list-item__label {
       position: absolute;
@@ -88,6 +94,7 @@
     }
     .list-item__delete-button {
       margin-left: auto;
+      flex-shrink: 0;
       z-index: 1;
       transition: transform 0.3s ease, stroke 0.3s ease;
       cursor: var(--cursor-pointer);
@@ -104,6 +111,7 @@
       place-items: center;
       width: 2.4rem;
       height: 2.4rem;
+      flex-shrink: 0;
       border: solid 1px #393a4b;
       border-radius: 50%;
       background-origin: border-box;
